# create2-vanity-cli

./: .gitignore  Cargo.toml  README.md
contracts/: HashTimelockERC20.sol
scripts/: build-create2-calldata.ts
src/: main.rs
tools/create2-vanity-rs/: README.md
