[package]
name = "create2-vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ethabi = { version = "18.0", default-features = false, features = ["full-serde", "std"] }
bip39 = "1.1"
bip32 = { version = "0.5", features = ["secp256k1"] }
bs58 = "0.5"
ed25519-dalek = { version = "1.0", features = ["std"] }
ed25519-dalek-bip32 = "0.3"
once_cell = "1.19"
secp256k1 = { version = "0.28", default-features = false, features = ["std"] }
ripemd = "0.1"
sha2 = "0.10"
bech32 = "0.9"
